# alx_travel_app_0x03

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yaml  my.cnf  pyproject.toml  requirement.txt  ruff.toml  settings.py
alx_travel_app/: __init__.py  settings.py  urls.py
alx_travel_app/listings/: models.py  serializers.py  tasks.py  urls.py  views.py
alx_travel_app/listings/management/commands/: seed.py
alx_travel_app/listings/migrations/: 0001_initial.py  0002_booking_review_listing_amenities_listing_available_and_more.py
nginx/: nginx.conf
